# ogmios-client-rs

./: Cargo.toml  flake.nix
src/: codec.rs  evaluate.rs  http.rs  lib.rs  mempool.rs  pparams.rs  script.rs  submit.rs  utxo.rs  ws.rs
src/codec/: mod.rs  script.rs
src/method/: evaluate.rs  mod.rs  pparams.rs  rewards.rs  submit.rs  tip.rs  utxo.rs
tests/data/: ogmios_protocol_params.json
