[package]
name = "ogmios-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
hex = "0.4"
num-rational = { version = "0.4", features = ["serde"] }
num = "0.4"
thiserror = "2.0"
tokio-tungstenite = "0.26.1"
futures-util = "0.3"
url = "2.5"
tracing = "0.1"
