[package]
name = "ogmios-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
futures-util = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
uuid = { version = "1.20", features = ["v4"] }

num = "0.4"
num-rational = "0.4"

reqwest = { version = "0.13", features = ["json"] }
tokio-tungstenite = "0.28"
